[project]
name = "otj-commander-boxing-league"
version = "0.0.1"
authors = [
  { name="Shawn McNaughton", email="shawngmc@gmail.com" },
]
description = "Data Analysis for OTJ Boxing League for MTG"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = [
  'requests >= 2.32.1',
]

[project.urls]
"Homepage" = "https://github.com/shawngmc/otj-commander-boxing-league"
"Bug Tracker" = "https://github.com/shawngmc/otj-commander-boxing-league/issues"
